@@ -31,14 +31,12 @@ install_java() {
 
 start_server() {
     echo "🚀 Iniciando servidor Minecraft..."
-    taskset -c 0-$(($(nproc)-1)) java \
-    -Xms1G -Xmx2G \  # Ajuste a memória conforme necessário
-    -XX:+UseG1GC \      # Usar o Garbage Collector G1
-    -XX:ParallelGCThreads=$(nproc) \
-    -XX:ConcGCThreads=$(nproc) \
-    -XX:ActiveProcessorCount=$(nproc) \
-    -Dpaper.maxChunkThreads=$(nproc) \
-    -jar "$SERVER_JAR" nogui
+    while [ true ]; do
+    java -Xms1536M -Xmx1536M --add-modules=jdk.incubator.vector -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -jar server.jar --nogui
+
+    echo Server restarting...
+    echo Press CTRL + C to stop.
+    done
 }
 
 
